@@ -3,8 +3,6 @@ package com.pgoogol.httpexchangelogger.integration;
 import com.pgoogol.httpexchangelogger.model.HttpExchangeLogEvent;
 import com.pgoogol.httpexchangelogger.sink.HttpExchangeLogSink;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.CopyOnWriteArrayList;
 
@@ -14,21 +12,27 @@ public class RecordingHttpExchangeLogSink implements HttpExchangeLogSink {
 
     @Override
     public void log(HttpExchangeLogEvent event) {
+
         events.add(event);
     }
 
     public List<HttpExchangeLogEvent> getEvents() {
-        return Collections.unmodifiableList(new ArrayList<>(events));
+
+        return List.copyOf(events);
     }
 
     public HttpExchangeLogEvent last() {
+
         if (events.isEmpty()) {
+
             throw new IllegalStateException("No events recorded");
         }
-        return events.get(events.size() - 1);
+        return events.getLast();
     }
 
     public void clear() {
+
         events.clear();
     }
+
 }
